{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 5,
  "lineage": "0d5af899-c6dd-30c3-576b-5b3a3d0e4528",
  "resources": [
    {
      "module": "module.instanceModule",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testInstanceEip",
      "provider": "module.instanceModule.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-033892807251a4a24",
            "domain": "vpc",
            "id": "eipalloc-0572b24ab7fd2491c",
            "instance": "i-09d7706a74dc5a7bb",
            "network_interface": "eni-0249c8245e58c3fb7",
            "private_dns": "ip-10-1-0-161.us-east-2.compute.internal",
            "private_ip": "10.1.0.161",
            "public_dns": "ec2-3-12-67-64.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.67.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.instanceModule.aws_instance.instance",
            "module.securityGroupModule.aws_security_group.sg_22",
            "module.securityGroupModule.aws_security_group.sg_80"
          ]
        }
      ]
    },
    {
      "module": "module.instanceModule",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "module.instanceModule.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea25761c768c04b5",
            "arn": "arn:aws:ec2:us-east-2:464392538707:instance/i-09d7706a74dc5a7bb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d7706a74dc5a7bb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0249c8245e58c3fb7",
            "private_dns": "ip-10-1-0-161.us-east-2.compute.internal",
            "private_ip": "10.1.0.161",
            "public_dns": "ec2-3-21-105-235.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.105.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-048e40a68cef8b36f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b17d93e8dbe7725d",
            "tags": {
              "Environment": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a2c3b3035a7600e",
              "sg-04b80d1e32883fea4"
            ]
          },
          "dependencies": [
            "module.securityGroupModule.aws_security_group.sg_22",
            "module.securityGroupModule.aws_security_group.sg_80"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroupModule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "module.securityGroupModule.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:464392538707:security-group/sg-04b80d1e32883fea4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b80d1e32883fea4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": null,
            "owner_id": "464392538707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08331e574743237f4"
          }
        }
      ]
    },
    {
      "module": "module.securityGroupModule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_80",
      "provider": "module.securityGroupModule.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:464392538707:security-group/sg-02a2c3b3035a7600e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a2c3b3035a7600e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_80",
            "name_prefix": null,
            "owner_id": "464392538707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08331e574743237f4"
          }
        }
      ]
    }
  ]
}